[gd_scene load_steps=71 format=2]

[ext_resource path="res://Art/UI/clockwish_arrow_pressed.png" type="Texture" id=1]
[ext_resource path="res://Art/UI/button_pressed.png" type="Texture" id=2]
[ext_resource path="res://Art/UI/skil_dog.png" type="Texture" id=3]
[ext_resource path="res://Art/UI/icon_mouse.png" type="Texture" id=4]
[ext_resource path="res://Art/Actor/mouse.png" type="Texture" id=5]
[ext_resource path="res://Art/UI/arrow_button.png" type="Texture" id=6]
[ext_resource path="res://Art/UI/arrow_button_pressed.png" type="Texture" id=7]
[ext_resource path="res://Art/UI/skil_mouse.png" type="Texture" id=8]
[ext_resource path="res://Art/Actor/dog.png" type="Texture" id=9]
[ext_resource path="res://Art/UI/icon_dog.png" type="Texture" id=10]
[ext_resource path="res://Art/UI/clockwish_arrow.png" type="Texture" id=11]
[ext_resource path="res://Art/UI/button.png" type="Texture" id=12]
[ext_resource path="res://Source/Level/2D/Lv_select_room/Select_UI.gd" type="Script" id=13]
[ext_resource path="res://Source/Level/2D/Lv_select_room/Select_box.gd" type="Script" id=14]
[ext_resource path="res://Source/Level/2D/Lv_select_room/Level_select_room.gd" type="Script" id=15]
[ext_resource path="res://Art/Background/bg_cat.png" type="Texture" id=16]
[ext_resource path="res://Art/Background/bg.png" type="Texture" id=17]
[ext_resource path="res://Art/UI/icon_cat.png" type="Texture" id=18]
[ext_resource path="res://Art/UI/skil_cat.png" type="Texture" id=19]
[ext_resource path="res://Art/UI/arrow.png" type="Texture" id=20]
[ext_resource path="res://Art/Actor/cat.png" type="Texture" id=21]
[ext_resource path="res://Source/Level/2D/Lv_select_room/Start_butoon.gd" type="Script" id=22]
[ext_resource path="res://Source/Level/2D/Lv_select_room/Character_info.gd" type="Script" id=23]
[ext_resource path="res://Resource/Font/neodgm.ttf" type="DynamicFontData" id=24]
[ext_resource path="res://Art/Actor/kimyayong.png" type="Texture" id=25]
[ext_resource path="res://Art/Background/bg_mouse.png" type="Texture" id=26]
[ext_resource path="res://Art/Actor/gangji.png" type="Texture" id=27]
[ext_resource path="res://Art/Actor/gaenary.png" type="Texture" id=28]
[ext_resource path="res://Art/Background/bg_dog.png" type="Texture" id=29]
[ext_resource path="res://Sound/Bgm/Enter the Gungeon - The Breach Yawns - OST.ogg" type="AudioStream" id=30]

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 21 )
region = Rect2( 0, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 21 )
region = Rect2( 0, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 21 )
region = Rect2( 26, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 21 )
region = Rect2( 52, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 21 )
region = Rect2( 78, 0, 26, 26 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 20, 20 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 26, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 52, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 78, 0, 26, 26 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 2.6
} ]

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 20, 20 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 9 )
region = Rect2( 26, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 9 )
region = Rect2( 52, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 9 )
region = Rect2( 78, 0, 26, 26 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 2.2
} ]

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 20, 20 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 27 )
region = Rect2( 0, 0, 50, 86 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 25 )
region = Rect2( 0, 0, 50, 86 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 28 )
region = Rect2( 0, 0, 50, 86 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 43 ) ],
"loop": false,
"name": "mouse",
"speed": 5.0
}, {
"frames": [ SubResource( 42 ) ],
"loop": false,
"name": "cat",
"speed": 5.0
}, {
"frames": [ SubResource( 44 ) ],
"loop": false,
"name": "dog",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 19 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 12, 13 )

[sub_resource type="SpriteFrames" id=39]
animations = [ {
"frames": [ SubResource( 36 ) ],
"loop": true,
"name": "mouse",
"speed": 5.0
}, {
"frames": [ SubResource( 38 ) ],
"loop": true,
"name": "cat",
"speed": 5.0
}, {
"frames": [ SubResource( 37 ) ],
"loop": true,
"name": "dog",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 24 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 24 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 15, 15 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 15, 15 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 15, 15 )

[sub_resource type="SpriteFrames" id=31]
animations = [ {
"frames": [ SubResource( 28 ) ],
"loop": false,
"name": "mouse",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ) ],
"loop": false,
"name": "cat",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ) ],
"loop": false,
"name": "dog",
"speed": 5.0
}, {
"frames": [ null ],
"loop": false,
"name": "none",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 15, 15 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 15, 15 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 15, 15 )

[sub_resource type="SpriteFrames" id=35]
animations = [ {
"frames": [ SubResource( 32 ) ],
"loop": false,
"name": "mouse",
"speed": 5.0
}, {
"frames": [ SubResource( 34 ) ],
"loop": false,
"name": "cat",
"speed": 5.0
}, {
"frames": [ SubResource( 33 ) ],
"loop": false,
"name": "dog",
"speed": 5.0
}, {
"frames": [ null ],
"loop": false,
"name": "none",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 20, 10 )

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 26, 20 )

[sub_resource type="DynamicFont" id=40]
font_data = ExtResource( 24 )

[node name="Level_select_room" type="Node2D"]
script = ExtResource( 15 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 100, 200 )
texture = ExtResource( 17 )

[node name="Bg_Cat" type="Sprite" parent="."]
position = Vector2( 58, 56 )
texture = ExtResource( 16 )

[node name="Bg_mouse" type="Sprite" parent="."]
position = Vector2( 61, 123 )
texture = ExtResource( 26 )

[node name="Bg_dog" type="Sprite" parent="."]
position = Vector2( 65, 195 )
texture = ExtResource( 29 )

[node name="Cat" type="AnimatedSprite" parent="."]
position = Vector2( 40, 80 )
frames = SubResource( 6 )
animation = "idle"
frame = 2
playing = true

[node name="Button" type="TouchScreenButton" parent="Cat"]
position = Vector2( -21, -18 )
shape = SubResource( 9 )
shape_visible = false

[node name="Mouse" type="AnimatedSprite" parent="."]
position = Vector2( 40, 150 )
frames = SubResource( 14 )
playing = true

[node name="Button2" type="TouchScreenButton" parent="Mouse"]
position = Vector2( -20, -18 )
shape = SubResource( 20 )
shape_visible = false

[node name="Dog" type="AnimatedSprite" parent="."]
position = Vector2( 40, 220 )
frames = SubResource( 19 )
frame = 3
playing = true

[node name="Button3" type="TouchScreenButton" parent="Dog"]
position = Vector2( -20, -19 )
shape = SubResource( 21 )
shape_visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Select_UI" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character_info" type="Control" parent="CanvasLayer/Select_UI"]
margin_left = 104.0
margin_top = 80.0
margin_right = 109.0
margin_bottom = 84.0
script = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info_box" type="ColorRect" parent="CanvasLayer/Select_UI/Character_info"]
margin_left = -21.0
margin_top = -45.0
margin_right = 92.0
margin_bottom = 48.0
color = Color( 0.223529, 0.631373, 0.176471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skil_box" type="ColorRect" parent="CanvasLayer/Select_UI/Character_info/Info_box"]
margin_left = 51.0
margin_top = 30.0
margin_right = 111.0
margin_bottom = 60.0
color = Color( 0.470588, 0.792157, 0.352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stat_box" type="ColorRect" parent="CanvasLayer/Select_UI/Character_info/Info_box"]
margin_left = 51.0
margin_top = 64.0
margin_right = 82.0
margin_bottom = 90.0
color = Color( 0.454902, 0.831373, 0.313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite_box" type="ColorRect" parent="CanvasLayer/Select_UI/Character_info/Info_box"]
margin_left = 1.0
margin_top = 2.0
margin_right = 49.0
margin_bottom = 91.0
color = Color( 0.776471, 0.776471, 0.776471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow" type="Sprite" parent="CanvasLayer/Select_UI/Character_info"]
position = Vector2( -31, 0 )
rotation = 1.57079
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 20 )

[node name="Character" type="AnimatedSprite" parent="CanvasLayer/Select_UI/Character_info"]
position = Vector2( 4, 1 )
frames = SubResource( 26 )
animation = "cat"

[node name="Skil_icon" type="AnimatedSprite" parent="CanvasLayer/Select_UI/Character_info"]
position = Vector2( 39, -6 )
frames = SubResource( 39 )
animation = "cat"

[node name="Name" type="Label" parent="CanvasLayer/Select_UI/Character_info"]
margin_left = 35.0
margin_top = -33.0
margin_right = 83.0
margin_bottom = -17.0
custom_fonts/font = SubResource( 7 )
text = "김애옹"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Career" type="Label" parent="CanvasLayer/Select_UI/Character_info"]
margin_left = 39.0
margin_top = -42.0
margin_right = 143.0
margin_bottom = -26.0
rect_scale = Vector2( 0.4, 0.4 )
custom_colors/font_color = Color( 0.764706, 0.764706, 0.764706, 1 )
custom_fonts/font = SubResource( 8 )
text = "고양이 마법사"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skil" type="Label" parent="CanvasLayer/Select_UI/Character_info"]
margin_left = 33.0
margin_top = 6.0
margin_right = 176.0
margin_bottom = 22.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 8 )
text = "강력한 폭발마법"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="Label" parent="CanvasLayer/Select_UI/Character_info"]
margin_left = 32.0
margin_top = 22.0
margin_right = 102.0
margin_bottom = 38.0
rect_scale = Vector2( 0.35, 0.35 )
custom_fonts/font = SubResource( 8 )
text = "체력:3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DMG" type="Label" parent="CanvasLayer/Select_UI/Character_info"]
margin_left = 32.0
margin_top = 30.0
margin_right = 102.0
margin_bottom = 46.0
rect_scale = Vector2( 0.35, 0.35 )
custom_fonts/font = SubResource( 8 )
text = "공격:2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SPD" type="Label" parent="CanvasLayer/Select_UI/Character_info"]
margin_left = 32.0
margin_top = 37.0
margin_right = 104.0
margin_bottom = 53.0
rect_scale = Vector2( 0.35, 0.35 )
custom_fonts/font = SubResource( 8 )
text = "속도:높음"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="CanvasLayer/Select_UI"]
margin_left = 101.0
margin_top = 340.0
margin_right = 141.0
margin_bottom = 380.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select_box" type="ColorRect" parent="CanvasLayer/Select_UI/Buttons"]
margin_left = -21.0
margin_top = -23.0
margin_right = 19.0
margin_bottom = -7.0
color = Color( 0.243137, 0.243137, 0.243137, 1 )
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chr_box" type="ColorRect" parent="CanvasLayer/Select_UI/Buttons/Select_box"]
margin_left = 2.0
margin_top = 2.0
margin_right = 18.0
margin_bottom = 18.0
color = Color( 0.45098, 0.45098, 0.45098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chr_box2" type="ColorRect" parent="CanvasLayer/Select_UI/Buttons/Select_box"]
margin_left = 22.0
margin_top = 2.0
margin_right = 38.0
margin_bottom = 18.0
color = Color( 0.45098, 0.45098, 0.45098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="\'selected\'" type="Label" parent="CanvasLayer/Select_UI/Buttons/Select_box"]
margin_left = 8.0
margin_top = -8.0
margin_right = 56.0
margin_bottom = 8.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 7 )
text = "선택됨"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character_icon" type="AnimatedSprite" parent="CanvasLayer/Select_UI/Buttons/Select_box"]
position = Vector2( 10, 9 )
frames = SubResource( 31 )
animation = "none"

[node name="Character_icon2" type="AnimatedSprite" parent="CanvasLayer/Select_UI/Buttons/Select_box"]
position = Vector2( 30, 9 )
frames = SubResource( 35 )
animation = "none"

[node name="Choose_button" type="TouchScreenButton" parent="CanvasLayer/Select_UI/Buttons"]
position = Vector2( -25, -1 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 12 )
pressed = ExtResource( 2 )
shape = SubResource( 27 )
shape_visible = false

[node name="\'Choose\'" type="Label" parent="CanvasLayer/Select_UI/Buttons/Choose_button"]
margin_left = 8.0
margin_top = 2.0
margin_right = 40.0
margin_bottom = 18.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 8 )
text = "선택"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset_button" type="TouchScreenButton" parent="CanvasLayer/Select_UI/Buttons"]
position = Vector2( -74, -1 )
normal = ExtResource( 11 )
pressed = ExtResource( 1 )

[node name="Start_butoon" type="TouchScreenButton" parent="CanvasLayer/Select_UI/Buttons"]
position = Vector2( 38, -25 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )
shape = SubResource( 41 )
shape_visible = false
script = ExtResource( 22 )

[node name="\'start\'" type="Label" parent="CanvasLayer/Select_UI/Buttons/Start_butoon"]
margin_left = 11.0
margin_top = 14.0
margin_right = 51.0
margin_bottom = 30.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 40 )
text = "시작"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bgm_select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 30 )
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="Cat/Button" to="CanvasLayer/Select_UI" method="_on_Button_pressed"]
[connection signal="released" from="Cat/Button" to="CanvasLayer/Select_UI" method="_on_Button_released"]
[connection signal="pressed" from="Mouse/Button2" to="CanvasLayer/Select_UI" method="_on_Button2_pressed"]
[connection signal="released" from="Mouse/Button2" to="CanvasLayer/Select_UI" method="_on_Button2_released"]
[connection signal="pressed" from="Dog/Button3" to="CanvasLayer/Select_UI" method="_on_Button3_pressed"]
[connection signal="released" from="Dog/Button3" to="CanvasLayer/Select_UI" method="_on_Button3_released"]
[connection signal="pressed" from="CanvasLayer/Select_UI/Buttons/Choose_button" to="CanvasLayer/Select_UI/Character_info" method="_on_Choose_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Select_UI/Buttons/Reset_button" to="CanvasLayer/Select_UI/Character_info" method="_on_Reset_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Select_UI/Buttons/Start_butoon" to="CanvasLayer/Select_UI/Buttons/Start_butoon" method="_on_Start_butoon_pressed"]
